spl2/hn_tests/failing/deepest.hn
foo x = {
	bar y = {
		baz y = {
			kaka y = incr x
			kaka 7
		}
		baz 5
	}
	bar x
}